public/stylesheets/layout.css
/* ... */
div.middle.image .nivo-nextNav {right:33px; text-indent:-9999px; width:69px; height:61px; background:url(/images/common/next_image_bkg.png) no-repeat 0 0;}
div.middle.image .nivo-nextNav:hover {background-position:0 -61px;}
div.middle.image .nivo-controlNav {position:absolute; bottom:29px; left:33px; height:21px; background:url(/images/common/left_nav_bkg.png) no-repeat 0 0; width:auto; padding:0 0 0 4px; z-index:1000000;}
div.middle.image .nivo-controlNav span {float:left; height:21px; background:url(/images/common/right_nav_bkg.png) no-repeat right 0; width:auto; padding:0 3px 0 0;}
div.middle.image .nivo-controlNav a {display:block; width:6px; height:6px; background:url(/images/icons/circle_nav.png) no-repeat; text-indent:-9999px; border:0; margin:8px 3px 0 2px; float:left;}
div.middle.image .nivo-controlNav a.active {background-position:0 -6px; color:white;}
div.middle.image .nivo-controlNav a:hover {background-position:0 -6px; color:white; cursor:pointer;}

div.middle_white.site h3 {float:left; width:100%; font:bold 21px Arial; color:#333333; letter-spacing:-1px; padding:0 0 10px 0; margin:20px 0 0 0;}
div.middle_white.site p {float:left; width:100%; font:normal 13px Arial; color:#666666; line-height:17px;}
div.middle_white.site p a {font:normal 13px Arial; color:#FF6600; text-decoration:none;}
div.middle_white.site p a:hover {text-decoration:underline;}
div.middle_white.site.no_description { position: relative; padding: 155px 0; width: 100%; text-align: center;}
div.middle_white.site.no_description .icon{ position: absolute; left: 107px; top: 50%; margin-top: -63px; z-index: 0;}
div.middle_white.site.no_description h3, div.middle_white.site.no_description p { position: relative;}
div.middle_white p {float:left; width:100%; font:normal 15px Arial; color:#666666; line-height:19px;}
div.middle_white p a {font:normal 13px Arial; color:#FF6600; text-decoration:none;}
div.bottom.site {float:left; width:633px; height:85px; background:url(/images/round/bottom_grey.png) no-repeat 0 0;}
div.bottom.site p {float:left; width:auto; font:normal 13px Arial; color:#666666; text-shadow:0 1px white; margin:28px 0 0 30px;}
div.bottom.site a {float:right; margin:20px 30px 0 0; font:bold 15px Arial; color:#666666; text-shadow:0 1px white; padding:9px 0 8px 45px; width:152px; height:17px; text-align:left; background:url(/images/site/edit_button.png) no-repeat 0 0; text-decoration:none;}
div.bottom.site a:hover {background-position:0 -34px; color:#555555;}

div.opaque.site {float:left; margin:35px 0 0 0;}
div.opaque div.middle_map {float:left; width:244px; padding:0 30px; height:auto; background:url(/images/round/middle_grey_opaque_short.png) repeat-y center 0;}
div.opaque div.middle_map div.outer_map {float:left; width:228px; height:174px; padding:7px; background:url(/images/site/map_shadow.png) no-repeat 0 0;}
div.opaque div.middle_map div#map {float:left; width:100%; height:100%; background:white;}
div.opaque div.middle_site {float:left; width:234px; padding:0 35px 10px 35px; height:auto; background:url(/images/round/middle_grey_opaque_short.png) repeat-y center 0;}
div.opaque div.middle_site h6 {float:left; width:100%; padding:15px 0 0 0; font:bold 11px Arial; color:#ABB3B4;}
div.opaque div.middle_site p {float:left; width:100%; font:normal 15px Arial; color:white; padding:2px 0 0 0;}
div.opaque div.middle_site p a {border-bottom:1px dotted white; color:white; text-decoration:none;}
div.opaque div.middle_site p a:hover {border-bottom:1px solid white;}
div.opaque div.bottom_site {float:left; width:304px; height:50px; background:url(/images/round/bottom_grey_opaque_short_2.png) no-repeat center 0;}
div.opaque div.bottom_site p {float:left; width:auto; margin:17px 0 0 35px; text-align:left; font:normal 13px Arial; color:white; text-decoration:none;}
div.opaque div.bottom_site p a {color:#FF6600; text-decoration:none;}
div.opaque div.bottom_site p a:hover {text-decoration:underline;}
div.opaque div.bottom_site_empty {float:left; background:url('../images/round/bottom_grey_opaque_short_empty.png') no-repeat 0 0; width:286px; height:13px; margin:0 0 0 9px;}


/*PARTNERS*/

ul.partners {float:left; width:100%; margin:0;}
ul.partners li {float:left; margin:39px 0 0;}
ul.partners li.first {margin:0;}
ul.partners li div.top {float:left; width:100%; height:15px; background:url(/images/round/top_white_long.png) no-repeat 0 0; margin:0;}
ul.partners li div.middle {position:relative; float:left; width:868px; padding:20px 40px 15px 40px; height:auto; background:url(/images/round/middle_white_long.png) repeat-y 0 0;}
ul.partners li div.middle h2 {font:bold 23px Arial; color:#333333; letter-spacing:-1px;}
ul.partners li div.middle p {padding:15px 0 0 0; font:normal 15px Arial; color:#666666; line-height:18px;}
ul.partners li div.middle p.subtitle {padding:2px 0 0 0;}
ul.partners li div.middle p a {color:#FF6600;}
ul.partners li div.middle p a:hover {color:#FF3300;}
ul.partners li div.middle ul {float:left; width:860px; margin:10px 0 0 8px;}
ul.partners li div.middle ul li {float:left; width:726px; padding:5px 0 5px 10px; background:url(/images/icons/grey_circle.jpg) no-repeat 0 11px; font:normal 15px Arial; color:#666666; margin:0;}
ul.partners li div.middle div.left {float:left; width:103px;}
ul.partners li div.middle div.right {float:right; width:755px;}
ul.partners li div.bottom {float:left; width:100%; height:25px; background:url(/images/round/bottom_white_long.png) no-repeat 0 0; margin:0;}


/*FAQ*/
div.faq_block.first {margin:14px 0 0 0;}
div.faq_block {float:left; width:633px;}
div.faq_block div.head_faq div.top {float:left; width:633px; height:15px; background:url(/images/round/top_orange.png) no-repeat 0 0; margin:22px 0 0 0;}
div.faq_block div.head_faq div.top.first {margin:35px 0 0 0;}
div.faq_block div.head_faq div.middle {position:relative; float:left; width:553px; padding:15px 40px 20px 40px; height:auto; background:url(/images/round/middle_orange.png) repeat-y 0 0;}
/* ... */

